# gradle-haskell-plugin

./: .gitignore  .gitmodules  OWNERS  README.md  build.gradle
gradle/wrapper/: gradle-wrapper.properties
src/main/scala/com/prezi/haskell/gradle/: ApiHelper.scala  GhcModSupport.scala  HaskellCompilationSupport.scala  HaskellPlugin.scala  HaskellProject.scala  Names.scala  Profiling.scala  ProjectExtender.scala  SandFixSupport.scala  SandboxSupport.scala  ZippedSandboxArtifactSupport.scala
src/test-projects/: build.gradle
src/test-projects/app/: app.cabal  build.gradle
src/test-projects/app/src/main/haskell/: Main.hs
src/test-projects/basic/: build.gradle  test.cabal
src/test-projects/lib1/src/main/haskell/: Lib1.hs
src/test-projects/test1-pride/app/: app.cabal  build.gradle
src/test-projects/test1-pride/app/src/main/haskell/: Main.hs
src/test-projects/test1-pride/lib1/: build.gradle
src/test-projects/test1-pride/lib2/: build.gradle
src/test-projects/test1-with-text/: build.gradle
src/test-projects/test1-with-text/app/: build.gradle
src/test-projects/test1-with-text/app/src/test/haskell/: Test.hs
src/test-projects/test1-with-text/lib1/: lib1.cabal
src/test-projects/test1-with-text/lib2/: lib2.cabal
src/test-projects/test1-with-text/lib2/src/main/haskell/: Lib2.hs
src/test-projects/test1/app/: build.gradle
src/test-projects/test1/lib2/: build.gradle
src/test-projects/test2/app/: build.gradle
src/test-projects/test2/app/src/main/haskell/: Main.hs
src/test-projects/test2/lib2/src/main/haskell/: Lib2.hs
(+113 files in other folders)
