name:                test
version:             0.1.0.0
author:              Daniel Vigovszky
maintainer:          daniel.vigovszky@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src/main/haskell
  exposed-modules:     Lib1
  build-depends:       base
  default-language:    Haskell2010
