name:                app
version:             1.2.3.4
author:              Daniel Vigovszky
maintainer:          daniel.vigovszky@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable app
  main-is:             Main.hs
  hs-source-dirs:      src/main/haskell
  build-depends:       base
                     , lib1
                     , lib2
  default-language:    Haskell2010

test-suite app-test
  type:                exitcode-stdio-1.0
  build-depends:       base
  hs-source-dirs:      src/test/haskell
  main-is:             Test.hs
  default-language:    Haskell2010
