name:                lib2
version:             0.3
author:              Daniel Vigovszky
maintainer:          daniel.vigovszky@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src/main/haskell
  exposed-modules:     Lib2
  build-depends:       base
                     , ansi-wl-pprint
                     , lib1
  default-language:    Haskell2010
